# DS_Pandas

./: README.md  main.py  pandas.ipynb  pyproject.toml
BasicStatsInPython/: intro_stats.ipynb
DataManipulationWithPandas/: pandas.ipynb  short_student_habits_performance.csv
